     undo, attack dialog or right-click cancel
   * need only one right-click to open context-menu on an unselected enemy
   * selecting an enemy doesn't directly cancel its reachable zone
   * there's a new "Game Settings" window which shows the basic game settings
     for each player, accessible through the "More" button in the "Status Table"
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new tag [filter_radius] to allow greater control over radius expansion
     when using the standard location filter
   * fix a bug where containers could only be stored at the top-level
   * fix a bug where both x and y had to be specified in location filters
   * better handling/reporting of invalid WML variable type usage
   * new key find_in= to allow searching a variable of previously
     stored locations when using the standard location filter
   * new key find_in= to allow searching a variable of previously
     stored units when using the standard unit filter
   * new extra_defines= key to define in campaigns some other preprocessor
     symbol *before* the files are repreprocessed
   * fog and shroud tiles are now defined by the TerrainWML (not [game_config])
   * new key store_location_as= to store generated chamber item locations
   * the border has been made themable
   * Instead of having an empty upkeep type as the default when reading a
     config file being used to normally give leaders a 0 upkeep, now leaders
     (canrecruit=1) are specifically exempted from upkeep and the upkeep
     type defaults to "full" when read from config files the same as for
     using the recruit function. This makes documenting how upkeep works
     simpler (it currently wasn't really correct) without having to make
     leaders loyal. It also will work better for campaigns where the leaders
     change (not that there are any now) so that the current leader is
     exempted and any exleaders pay for upkeep (unless the are specically