@@ -545,16 +545,12 @@ What would you like to wish for?"
                 [/removeitem]
             [/then]
             [effect]
-                apply_to=attack
-                range=melee
-                set_type=arcane
+                apply_to=new_ability
+		[abilities]
+		    {ABILITY_REGENERATES}
+		[/abilities]
             [/effect]
         [/object]
-        [message]
-            speaker=narrator
-            message= _ "Can't set abilities yet, sorry."
-            image=wesnoth-icon.png
-        [/message]
     [/event]
 #enddef
 
